--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Production-Ready-Instruction-Finetuning-of-Meta-Llama-3.2-3B-Instruct-Project"]
 	path = Production-Ready-Instruction-Finetuning-of-Meta-Llama-3.2-3B-Instruct-Project
 	url = https://github.com/shaheennabi/Production-Ready-Instruction-Finetuning-of-Meta-Llama-3.2-3B-Instruct-Project.git
+[submodule "Production-Ready-TripPlanner-Multi-AI-Agent-Project"]
+	path = Production-Ready-TripPlanner-Multi-AI-Agent-Project
+	url = https://github.com/shaheennabi/Production-Ready-TripPlanner-Multi-AI-Agent-Project
