added leaflogic Multi-AI  agents project

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Production-Ready-TripPlanner-Multi-AI-Agent-Project"]
 	path = Production-Ready-TripPlanner-Multi-AI-Agent-Project
 	url = https://github.com/shaheennabi/Production-Ready-TripPlanner-Multi-AI-Agent-Project
+[submodule "Production-Ready-LeafLogic-Multi-AI-Agents-Project"]
+	path = Production-Ready-LeafLogic-Multi-AI-Agents-Project
+	url = https://github.com/shaheennabi/Production-Ready-LeafLogic-Multi-AI-Agents-Project
